# CanadianExperience

./: .gitignore  README.md  movie.anim
CanadianExperienceLib/: CMakeLists.txt  MachineDrawable.cpp  MachineDrawable.h  MachineStartDlg.cpp  MachineStartDlg.h  Picture.cpp  Picture.h  PictureFactory.cpp  SpartyFactory.cpp  Timeline.cpp  Timeline.h  ViewEdit.cpp  ViewTimeline.cpp  ViewTimeline.h
MachineLib/: ActualMachineSystem.cpp  ActualMachineSystem.h  AirAccepter.cpp  AirAccepter.h  AirSink.cpp  AirSink.h  AirSource.cpp  AirSource.h  CMakeLists.txt  CardReader.cpp  CardReader.h  Component.cpp  Component.h  Cylinder.cpp  Cylinder.h  Cymbal.cpp  Cymbal.h  Instrument.cpp  Instrument.h  Machine.cpp  Machine.h  MachineOneFactory.cpp  MachineOneFactory.h  MachineSystemFactory.cpp  MachineTwoFactory.cpp  MachineTwoFactory.h  Pipe.cpp  Pipe.h  Polygon.cpp  Shape.cpp  Shape.h  StruckInstrument.cpp  StruckInstrument.h  Tubing.cpp  Tubing.h
resources/xrc/: main.fbp  main.xrc
